tests/reference/asr-def_func_01-1c7f4cd.stderr
semantic error: Number of arguments does not match in the function call
 --> tests/errors/def_func_01.py:5:1
  |
5 | func_01()
  | ^^^^^^^^^ missing 1 required arguments : 'x'
